<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="action_settings">Settings</string>
    <string name="main_fragment_title">My Nanodegree Apps!</string>

    <!-- Buttons Titles -->
    <string name="app_1_name">SPOTIFY STREAMER</string>
    <string name="app_2_name">SCORES APP</string>
    <string name="app_3_name">LIBRARY APP</string>
    <string name="app_4_name">BUILD IT BIGGER</string>
    <string name="app_5_name">XYZ READER</string>
    <string name="app_6_name">CAPSTONE:MY OWN APP</string>

    <!-- Toast Messages -->
    <string name="app_1_message">This button will launch the Spotify Streamer App</string>
    <string name="app_2_message">This button will launch the Scores App</string>
    <string name="app_3_message">This button will launch the Library App</string>
    <string name="app_4_message">This button will launch the Build it Bigger App</string>
    <string name="app_5_message">This button will launch the XYZ Reader App</string>
    <string name="app_6_message">This button will launch the Capstone App</string>

</resources>
