<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_title"
        style="@style/titles"/>

    <!-- Main Container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

        <!-- Buttons Container is inside a scroll view for small screen devices-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <!-- Buttons Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <!-- Each button is inside a linearlayout to make it relative to the screen sizes using weight values -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/app_1_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_1_name"
                        android:layout_weight="1.5"
                        style="@style/mainButtonStyle"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/app_2_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_2_name"
                        android:layout_weight="1.5"
                        style="@style/mainButtonStyle"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/app_3_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_3_name"
                        android:layout_weight="1.5"
                        style="@style/mainButtonStyle"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/app_4_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_4_name"
                        android:layout_weight="1.5"
                        style="@style/mainButtonStyle"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/app_5_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_5_name"
                        android:layout_weight="1.5"
                        style="@style/mainButtonStyle"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/app_6_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_6_name"
                        android:layout_weight="1.5"
                        style="@style/secondaryButtonStyle"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
